admission-controller/opa-policies/14-deny-host-ports-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostPorts
metadata:
  name: deny-host-ports
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
